# fin_sight_server

./: .env.dev  .gitignore  README.md  docker-compose.yml  pipeline.py  prometheus.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a194b75c5d8c_add_images_column_to_article_contents.py  ab666d65e925_add_related_statistics_to_enriched_.py  acf36018cb31_initial_schemas.py  add_images_col_add_images_column_to_article_contents.py  be06d2857cf1_add_statistics_data_to_enriched_articles.py  deb170115069_initial_schema_with_description.py
app/: database.py  main.py
app/api/: articles.py  health.py
app/core/: collectors.py  config.py  monitoring.py  processors.py  services.py
app/models/: __init__.py  article.py  domain_term.py  enums.py  topic.py
app/models/statistic_model/: statistic.py
app/schemas/: article.py  external.py
data/: catalog_core15.json  finance_terms_700_all.json  observations_core15.jsonl
data/raw/: fx.usdkrw.m_20250901_154810.json  kr.base.rate.d_20250901_154808.json  kr.cpi.core.m_20250901_154807.json  kr.cpi.headline.m_20250901_154806.json  kr.current.account.m_20250901_154811.json  kr.kospi.d_20250901_154812.json  kr.ppi.m_20250901_154808.json
ecos/data_pipeline/: fetch_ecos.py
fin_sight_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logs/: logging_config.py
scripts/: repair_keywords.py  seed_domain_terms.py  seed_statistics.py
scripts/back_up/: pipeline.py.bak  processors.py.bak  services.py.bak
